tests/fixtures/invalid/pow_str_list_float.py
# Cannot call pow() with Str, List[int], Float
x = pow("hello", [1, 2, 3], 1.0)
